--- a/opdracht_004.html
+++ b/opdracht_004.html
@@ -6,8 +6,8 @@
         <h1>mijn 1e winc academy opdracht</h1>
         <hr>
         <h2>hierbij gebruik ik HTML</h2>
-         </head>
-    <body></header>
+        </head></header>
+    <body>
        <main><p>en hierbij komt dan de tekst van het artikel die ik zou schrijven.</p>
 <body> <ul> 
         <h1>Thee tegen verkoudheid</h1>
